kubernetes/apps/wallos/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wallos
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
