kubernetes/apps/wallos/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: wallos
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
